[tool.poetry]
name = "utmos22"
version = "0.1.0"
description = "UTokyo-Sarulab submission for VoiceMOS challenge 2022"
authors = [
    "Takaaki Saeki <you@example.com>",
    "Xin Detai <you@example.com>",
    "Wataru Nakata <you@example.com>",
    "Tomoki Koriyama <you@example.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.15.0"
torch = "^1.10.1"
datasets = "^1.17.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
torchaudio = "^0.10.1"
pytorch-lightning = "^1.5.8"
phonemizer = "^3.0.1"
SoundFile = "^0.10.3"
librosa = "^0.8.1"
python-Levenshtein = "^0.12.2"
wandb = "^0.12.10"
hydra-core = "^1.1.1"
hydra-optuna-sweeper = "^1.1.2"
augment = {git = "https://github.com/facebookresearch/WavAugment.git", rev = "main"}
fairseq = {git = "https://github.com/sarulab-speech/fairseq.git", rev = "main"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
